[gd_scene load_steps=4 format=2]

[ext_resource path="res://Levels/Base/Level.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Base/Cursor/Cursor.tscn" type="PackedScene" id=2]
[ext_resource path="res://Levels/Base/LevelMenu.gd" type="Script" id=3]

[node name="Level" type="Node"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="LevelMenu" type="VBoxContainer" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -83.0
margin_right = 1.0
margin_bottom = 92.0
grow_horizontal = 0
rect_min_size = Vector2( 84, 40 )
script = ExtResource( 3 )

[node name="Label" type="Label" parent="CanvasLayer/LevelMenu"]
margin_right = 84.0
margin_bottom = 20.0
rect_min_size = Vector2( 84, 20 )
text = "Level"
align = 1
valign = 1
uppercase = true

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/LevelMenu/Label"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.2, 0.2, 0.2, 1 )

[node name="Info" type="VBoxContainer" parent="CanvasLayer/LevelMenu"]
margin_top = 24.0
margin_right = 84.0
margin_bottom = 68.0

[node name="Label" type="Label" parent="CanvasLayer/LevelMenu/Info"]
margin_right = 84.0
margin_bottom = 20.0
rect_min_size = Vector2( 64, 20 )
align = 1
valign = 1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/LevelMenu/Info/Label"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.2, 0.2, 0.2, 1 )

[node name="Back" type="Button" parent="CanvasLayer/LevelMenu/Info"]
margin_top = 24.0
margin_right = 84.0
margin_bottom = 44.0
mouse_filter = 1
text = "Main Menu"

[node name="HideButton" type="Button" parent="CanvasLayer/LevelMenu"]
margin_top = 72.0
margin_right = 84.0
margin_bottom = 92.0
focus_mode = 0
mouse_filter = 1
text = "^"

[node name="Objects" type="Node2D" parent="."]

[node name="Cursor" parent="." instance=ExtResource( 2 )]

[connection signal="mouse_entered" from="CanvasLayer/LevelMenu" to="CanvasLayer/LevelMenu" method="_on_LevelMenu_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/LevelMenu" to="CanvasLayer/LevelMenu" method="_on_LevelMenu_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/LevelMenu/Info/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="CanvasLayer/LevelMenu/HideButton" to="CanvasLayer/LevelMenu" method="_on_HideButton_pressed"]
